walkthrus/TheBook-walkthru/chapter-8_Common-Collections/concepts/error.out.txt
error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
  --> src/main.rs:25:5
   |
24 |     let first = &v[0];
   |                  - immutable borrow occurs here
25 |     v.push(6);
   |     ^^^^^^^^^ mutable borrow occurs here
26 |     println!("The first element is: {}", first);
   |                                          ----- immutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
